# abstract-algebra-graph

./: .gitignore  README.md  pyproject.toml
graphs/: full_graph_1_gephi.gephi  graph.gexf  graph_chapters.gexf  graph_parts.gexf  test_graph.gexf
src/algebra_graph/: analysis.ipynb  chapter_wise_analysis.ipynb  scanner.ipynb  scanner_v2.ipynb  scanner_v3_text_analysis.ipynb
